--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	 <link rel="shortcut icon" href="favicon.ico">
 	 <link rel="stylesheet" type="text/css" href="css/style.css">
 	 <meta charset="UTF-8"/>
+	 <script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
 </head>
 <body>
 <div id="container">
@@ -14,43 +15,38 @@
 		<span class="start"><a href="#">new game</a><span>
 	</div>
 	
-	<div class="game-container">
-		<div class="game-grid">
-			<div class="game-row">
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="clear"></div>
-			</div>
-			<div class="game-row">
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="clear"></div>
-			</div>
-			<div class="game-row">
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="clear"></div>
-			</div>
-			<div class="game-row">
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="game-col"></div>
-				<div class="clear"></div>
-			</div>
-		</div>
+	<div class="game-container" id="game-container">
+
+			<div class="game-col" id="0-0"></div>
+			<div class="game-col" id="0-1"></div>
+			<div class="game-col" id="0-2"></div>
+			<div class="game-col" id="0-3"></div>
+
+			<div class="game-col" id="1-0"></div>
+			<div class="game-col" id="1-1"></div>
+			<div class="game-col" id="1-2"></div>
+			<div class="game-col" id="1-3"></div>
+
+			<div class="game-col" id="2-0"></div>
+			<div class="game-col" id="2-1"></div>
+			<div class="game-col" id="2-2"></div>
+			<div class="game-col" id="2-3"></div>
+
+			<div class="game-col" id="3-0"></div>
+			<div class="game-col" id="3-1"></div>
+			<div class="game-col" id="3-2"></div>
+			<div class="game-col" id="3-3"></div>
 	</div>
 
 	<div class="end">Just have a try !</div>
 </div>
+</body>
 
+
+<script type="text/javascript" src="js/pos.js"></script>
+<script type="text/javascript" src="js/number-cell.js"></script>
 <script type="text/javascript" src="js/move.js"></script>
 <script type="text/javascript" src="js/key_control.js"></script>
-</body>
+
+
 </html>
