--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 </body>
 
 
+<script type="text/javascript" src="js/init.js"></script>
 <script type="text/javascript" src="js/pos.js"></script>
 <script type="text/javascript" src="js/number-cell.js"></script>
 <script type="text/javascript" src="js/move.js"></script>
