--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="header"><h1 class="2048-title">2048</h1></div>
 	<div class="title">
 		<span>Join the numbers and get to the 2048 tile!</span>
-		<span class="start"><a href="#">new game</a><span>
+		<span class="start"><a href="javascript:init()">new game</a><span>
 	</div>
 	
 	<div class="game-container" id="game-container">
@@ -38,16 +38,17 @@
 			<div class="game-col" id="3-3"></div>
 	</div>
 
-	<div class="end">Just have a try !</div>
+	<div class="end">Design by Twilight</div>
+
+	<img src="http://i1.piimg.com/584041/687f484c4fe86e36.jpg">
 </div>
+
 </body>
 
-
+<script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
 <script type="text/javascript" src="js/number-cell.js"></script>
 <script type="text/javascript" src="js/key_control.js"></script>
 <script type="text/javascript" src="js/move.js"></script>
-
-
 
 </html>
